--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link href="stylesheet.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="container-sm"></div>
     <div class="container">
       <h1>&deg;Temperature Converter Celcius and Farenheit&deg;</h1>
       <div class="container-sm">
@@ -33,20 +34,22 @@
           <label class="form-check-label" for="flexRadioDefault1">
             Celcius to Farenheit
           </label>
-        </div>
-        <div class="form-check">
           <input
             class="form-check-input"
             type="radio"
             name="flexRadioDefault"
             id="flexRadioDefault2"
-            checked
           />
           <label class="form-check-label" for="flexRadioDefault2">
             Farenheit to Celcius
           </label>
         </div>
-        <input type="text" class="form-control" placeholder="&deg" />
+        <input
+          type="number"
+          class="form-control"
+          placeholder="&deg"
+          id="temp_input"
+        />
         <button type="button" class="btn btn-primary" id="convert">
           Convert
         </button>
